--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portfolio-website",
-  "homepage": "http://Votech.github.io/portfolio-website",
+  "homepage": "https://dazzling-leavitt-eaaf73.netlify.app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
